plugins {
    id 'java'
    id 'application'
}

group = 'org.example'
version = '1.0-SNAPSHOT'

repositories {
    mavenCentral()
}

dependencies {
    implementation 'io.javalin:javalin:6.1.3'

    implementation 'org.slf4j:slf4j-simple:2.0.13'

    testImplementation platform('org.junit:junit-bom:5.10.0')
    testImplementation 'org.junit.jupiter:junit-jupiter'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'

    implementation 'com.fasterxml.jackson.core:jackson-databind:2.17.1'
}


test {
    useJUnitPlatform()
}

application {
    mainClass = 'org.example.AplicacaoPrincipal'
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(24)
    }
}